// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|Debate.arguments connection fetches arguments associated to a debate with a cursor 1`] = `
Object {
  "node": Object {
    "arguments": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aToxNjE5ODIzNjAwMDAwO2k6MTtzOjI3OiJEZWJhdGVBbm9ueW1vdXNBcmd1bWVudEZvcjEiO30=",
          "node": Object {
            "body": "Freedom for da ganja man",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlQXJndW1lbnQ6RGViYXRlQW5vbnltb3VzQXJndW1lbnRGb3Ix",
            "published": true,
            "publishedAt": "2021-05-01 01:00:00",
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "FOR",
            "username": "rasta94",
            "viewerHasVote": false,
            "votes": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "author": Object {
                      "id": "VXNlcjp1c2VyMQ==",
                    },
                    "createdAt": "2021-05-02 00:00:00",
                    "id": "RGViYXRlQXJndW1lbnRWb3RlOjEyODAx",
                  },
                },
              ],
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNjAzNDM2NzYwMDAwO2k6MTtzOjE1OiJkZWJhdGVBcmd1bWVudDciO30=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VySWFu",
            },
            "body": "Si le cannabis était légalisé, il serait vendu par le circuit officiel qui en contrôlerait la quantité et limiterait la teneur de THC pour réduire les accidents. Il serait alors peu attrayant pour la majorité des utilisateurs en recherche de sensations, voire de défonce. Ainsi, comme avant, les trafiquants proposeraient un produit plus fortement dosé et moins cher n’ayant plus le coût des compromissions et des risques actuels.",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ3",
            "published": true,
            "publishedAt": "2020-10-23 09:06:00",
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "viewerHasVote": false,
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNjAzNDM2NzAwMDAwO2k6MTtzOjE1OiJkZWJhdGVBcmd1bWVudDYiO30=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyTWF4aW1lUUE=",
            },
            "body": "Le nombre de consommateurs de cannabis aux Pays-Bas n’a pas décru depuis la dépénalisation en 1976 et ce pays est devenu une plaque tournante du trafic en Europe. Idem en Espagne, qui a fait machine arrière.",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ2",
            "published": true,
            "publishedAt": "2020-10-23 09:05:00",
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "viewerHasVote": false,
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNjAzNDM2NjQwMDAwO2k6MTtzOjE1OiJkZWJhdGVBcmd1bWVudDUiO30=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VySnBlYw==",
            },
            "body": "Les criminels ne sont pas fixés sur un produit mais sur l’argent. Si on légalise le cannabis, ils se reporteront vers des drogues dures (cocaïne et autres drogues de synthèse).",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ1",
            "published": true,
            "publishedAt": "2020-10-23 09:04:00",
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "viewerHasVote": false,
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNjAzNDM2NTgwMDAwO2k6MTtzOjE1OiJkZWJhdGVBcmd1bWVudDQiO30=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyVmluY2VudA==",
            },
            "body": "Selon Pierre Kopp, la légalisation ramènerait « probablement entre 1 et 2 milliards d’euros par an à l’Etat », sous forme de taxes. Cet argent pourrait servir à financer des programmes de prévention et de lutte contre les drogues de toute nature. Le club Terra Nova avait de son côté estimé à 3 milliards d’euros le coût de la répression du cannabis pour la collectivité.",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ0",
            "published": true,
            "publishedAt": "2020-10-23 09:03:00",
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "FOR",
            "viewerHasVote": false,
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNjAzNDM2NTIwMDAwO2k6MTtzOjE1OiJkZWJhdGVBcmd1bWVudDMiO30=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyQWd1aQ==",
            },
            "body": "La politique répressive a échoué. Légaliser le cannabis mettrait fin à la violence engendrée par son trafic et assécherait les économies souterraines. Cela permettrait de sortir de nombreux adolescents des réseaux criminels.",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQz",
            "published": true,
            "publishedAt": "2020-10-23 09:02:00",
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "FOR",
            "viewerHasVote": false,
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNjAzNDM2NDYwMDAwO2k6MTtzOjE1OiJkZWJhdGVBcmd1bWVudDIiO30=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyVGhlbw==",
            },
            "body": "Les partisans de la légalisation estiment que le cannabis n’est pas plus nocif que le tabac ou l’alcool et doit être encadré de la même manière. Il pose un problème d’addiction qu’on peut contrer plus aisément en encadrant sa consommation.",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQy",
            "published": true,
            "publishedAt": "2020-10-23 09:01:00",
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "FOR",
            "viewerHasVote": true,
            "votes": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "author": Object {
                      "id": "VXNlcjp1c2VyU3B5bA==",
                    },
                    "createdAt": "2015-01-02 02:00:00",
                    "id": "RGViYXRlQXJndW1lbnRWb3RlOjEyMDAy",
                  },
                },
                Object {
                  "node": Object {
                    "author": Object {
                      "id": "VXNlcjp1c2VyNQ==",
                    },
                    "createdAt": "2015-01-02 01:00:00",
                    "id": "RGViYXRlQXJndW1lbnRWb3RlOjEyMDAx",
                  },
                },
              ],
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxNjAzNDM2NDAwMDAwO2k6MTtzOjE1OiJkZWJhdGVBcmd1bWVudDEiO30=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyU3B5bA==",
            },
            "body": "Malgré son coût élevé (plus de 12% de l’activité policière et des douanes sont consacrés à l’usage des drogues), la politique de répression est un échec. Selon l’Observatoire français des drogues et des toxicomanies (OFDT), on estime à 4 millions le nombre d’usagers, dont 1,2 million d’usagers sur une base mensuelle et 550 000 sur une base quotidienne.",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQx",
            "published": true,
            "publishedAt": "2020-10-23 09:00:00",
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "FOR",
            "viewerHasVote": false,
            "votes": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "author": Object {
                      "id": "VXNlcjp1c2VyMQ==",
                    },
                    "createdAt": "2015-01-01 00:00:00",
                    "id": "RGViYXRlQXJndW1lbnRWb3RlOjEyMDAw",
                  },
                },
              ],
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aToxNjAzNDM2NDAwMDAwO2k6MTtzOjE1OiJkZWJhdGVBcmd1bWVudDEiO30=",
        "hasNextPage": false,
      },
      "totalCount": 8,
    },
  },
}
`;

exports[`Internal|Debate.arguments connection fetches counters associated to a debate 1`] = `
Object {
  "node": Object {
    "againstArguments": Object {
      "totalCount": 5,
    },
    "allArguments": Object {
      "totalCount": 12,
    },
    "forArguments": Object {
      "totalCount": 7,
    },
    "publishedArguments": Object {
      "totalCount": 8,
    },
    "trashedArguments": Object {
      "totalCount": 2,
    },
    "unpublishedArguments": Object {
      "totalCount": 2,
    },
  },
}
`;

exports[`Internal|Debate.arguments connection fetches ips of arguments and argumentVotes associated to a debate 1`] = `
Object {
  "node": Object {
    "arguments": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "RGViYXRlQXJndW1lbnQ6RGViYXRlQW5vbnltb3VzQXJndW1lbnRGb3Ix",
            "ipAddress": "1.1.1.1",
            "votes": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "RGViYXRlQXJndW1lbnRWb3RlOjEyODAx",
                    "ipAddress": "1.1.1.1",
                  },
                },
              ],
            },
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQxMA==",
            "ipAddress": "43.43.43.43",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ5",
            "ipAddress": "42.42.42.42",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ3",
            "ipAddress": null,
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ2",
            "ipAddress": "240.35.158.144",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ1",
            "ipAddress": "63.221.86.226",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ0",
            "ipAddress": "149.72.26.181",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQz",
            "ipAddress": "179.148.86.50",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQy",
            "ipAddress": null,
            "votes": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "RGViYXRlQXJndW1lbnRWb3RlOjEyMDAy",
                    "ipAddress": null,
                  },
                },
                Object {
                  "node": Object {
                    "id": "RGViYXRlQXJndW1lbnRWb3RlOjEyMDAx",
                    "ipAddress": "5.5.5.5",
                  },
                },
              ],
            },
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQx",
            "ipAddress": null,
            "votes": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "RGViYXRlQXJndW1lbnRWb3RlOjEyMDAw",
                    "ipAddress": "1.1.1.1",
                  },
                },
              ],
            },
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlQXJndW1lbnQ6RGViYXRlQW5vbnltb3VzQXJndW1lbnRBZ2FpbnN0MQ==",
            "ipAddress": "1.1.1.1",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ4",
            "ipAddress": null,
            "votes": Object {
              "edges": Array [],
            },
          },
        },
      ],
    },
  },
}
`;

exports[`Internal|Debate.arguments connection fetches ips of arguments and argumentVotes associated to a debate without rights 1`] = `
Object {
  "node": Object {
    "arguments": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "RGViYXRlQXJndW1lbnQ6RGViYXRlQW5vbnltb3VzQXJndW1lbnRGb3Ix",
            "ipAddress": null,
            "votes": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "RGViYXRlQXJndW1lbnRWb3RlOjEyODAx",
                    "ipAddress": null,
                  },
                },
              ],
            },
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ3",
            "ipAddress": null,
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ2",
            "ipAddress": null,
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ1",
            "ipAddress": null,
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ0",
            "ipAddress": null,
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQz",
            "ipAddress": null,
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQy",
            "ipAddress": null,
            "votes": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "RGViYXRlQXJndW1lbnRWb3RlOjEyMDAy",
                    "ipAddress": null,
                  },
                },
                Object {
                  "node": Object {
                    "id": "RGViYXRlQXJndW1lbnRWb3RlOjEyMDAx",
                    "ipAddress": null,
                  },
                },
              ],
            },
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQx",
            "ipAddress": null,
            "votes": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "RGViYXRlQXJndW1lbnRWb3RlOjEyMDAw",
                    "ipAddress": null,
                  },
                },
              ],
            },
          },
        },
      ],
    },
  },
}
`;

exports[`Internal|Debate.arguments connection sort arguments associated to a debate by their number of votes 1`] = `
Object {
  "node": Object {
    "arguments": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aToyO2k6MTtzOjE1OiJkZWJhdGVBcmd1bWVudDIiO30=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyVGhlbw==",
            },
            "body": "Les partisans de la légalisation estiment que le cannabis n’est pas plus nocif que le tabac ou l’alcool et doit être encadré de la même manière. Il pose un problème d’addiction qu’on peut contrer plus aisément en encadrant sa consommation.",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQy",
            "published": true,
            "publishedAt": "2020-10-23 09:01:00",
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "FOR",
            "viewerHasVote": true,
            "votes": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "author": Object {
                      "id": "VXNlcjp1c2VyU3B5bA==",
                    },
                    "createdAt": "2015-01-02 02:00:00",
                    "id": "RGViYXRlQXJndW1lbnRWb3RlOjEyMDAy",
                  },
                },
                Object {
                  "node": Object {
                    "author": Object {
                      "id": "VXNlcjp1c2VyNQ==",
                    },
                    "createdAt": "2015-01-02 01:00:00",
                    "id": "RGViYXRlQXJndW1lbnRWb3RlOjEyMDAx",
                  },
                },
              ],
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxO2k6MTtzOjI3OiJEZWJhdGVBbm9ueW1vdXNBcmd1bWVudEZvcjEiO30=",
          "node": Object {
            "body": "Freedom for da ganja man",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlQXJndW1lbnQ6RGViYXRlQW5vbnltb3VzQXJndW1lbnRGb3Ix",
            "published": true,
            "publishedAt": "2021-05-01 01:00:00",
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "FOR",
            "username": "rasta94",
            "viewerHasVote": false,
            "votes": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "author": Object {
                      "id": "VXNlcjp1c2VyMQ==",
                    },
                    "createdAt": "2021-05-02 00:00:00",
                    "id": "RGViYXRlQXJndW1lbnRWb3RlOjEyODAx",
                  },
                },
              ],
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aToxO2k6MTtzOjE1OiJkZWJhdGVBcmd1bWVudDEiO30=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyU3B5bA==",
            },
            "body": "Malgré son coût élevé (plus de 12% de l’activité policière et des douanes sont consacrés à l’usage des drogues), la politique de répression est un échec. Selon l’Observatoire français des drogues et des toxicomanies (OFDT), on estime à 4 millions le nombre d’usagers, dont 1,2 million d’usagers sur une base mensuelle et 550 000 sur une base quotidienne.",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQx",
            "published": true,
            "publishedAt": "2020-10-23 09:00:00",
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "FOR",
            "viewerHasVote": false,
            "votes": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "author": Object {
                      "id": "VXNlcjp1c2VyMQ==",
                    },
                    "createdAt": "2015-01-01 00:00:00",
                    "id": "RGViYXRlQXJndW1lbnRWb3RlOjEyMDAw",
                  },
                },
              ],
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aTowO2k6MTtzOjE1OiJkZWJhdGVBcmd1bWVudDMiO30=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyQWd1aQ==",
            },
            "body": "La politique répressive a échoué. Légaliser le cannabis mettrait fin à la violence engendrée par son trafic et assécherait les économies souterraines. Cela permettrait de sortir de nombreux adolescents des réseaux criminels.",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQz",
            "published": true,
            "publishedAt": "2020-10-23 09:02:00",
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "FOR",
            "viewerHasVote": false,
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aTowO2k6MTtzOjE1OiJkZWJhdGVBcmd1bWVudDQiO30=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyVmluY2VudA==",
            },
            "body": "Selon Pierre Kopp, la légalisation ramènerait « probablement entre 1 et 2 milliards d’euros par an à l’Etat », sous forme de taxes. Cet argent pourrait servir à financer des programmes de prévention et de lutte contre les drogues de toute nature. Le club Terra Nova avait de son côté estimé à 3 milliards d’euros le coût de la répression du cannabis pour la collectivité.",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ0",
            "published": true,
            "publishedAt": "2020-10-23 09:03:00",
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "FOR",
            "viewerHasVote": false,
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aTowO2k6MTtzOjE1OiJkZWJhdGVBcmd1bWVudDUiO30=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VySnBlYw==",
            },
            "body": "Les criminels ne sont pas fixés sur un produit mais sur l’argent. Si on légalise le cannabis, ils se reporteront vers des drogues dures (cocaïne et autres drogues de synthèse).",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ1",
            "published": true,
            "publishedAt": "2020-10-23 09:04:00",
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "viewerHasVote": false,
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aTowO2k6MTtzOjE1OiJkZWJhdGVBcmd1bWVudDYiO30=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyTWF4aW1lUUE=",
            },
            "body": "Le nombre de consommateurs de cannabis aux Pays-Bas n’a pas décru depuis la dépénalisation en 1976 et ce pays est devenu une plaque tournante du trafic en Europe. Idem en Espagne, qui a fait machine arrière.",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ2",
            "published": true,
            "publishedAt": "2020-10-23 09:05:00",
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "viewerHasVote": false,
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aTowO2k6MTtzOjE1OiJkZWJhdGVBcmd1bWVudDciO30=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VySWFu",
            },
            "body": "Si le cannabis était légalisé, il serait vendu par le circuit officiel qui en contrôlerait la quantité et limiterait la teneur de THC pour réduire les accidents. Il serait alors peu attrayant pour la majorité des utilisateurs en recherche de sensations, voire de défonce. Ainsi, comme avant, les trafiquants proposeraient un produit plus fortement dosé et moins cher n’ayant plus le coût des compromissions et des risques actuels.",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ3",
            "published": true,
            "publishedAt": "2020-10-23 09:06:00",
            "trashed": false,
            "trashedAt": null,
            "trashedReason": null,
            "trashedStatus": null,
            "type": "AGAINST",
            "viewerHasVote": false,
            "votes": Object {
              "edges": Array [],
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aTowO2k6MTtzOjE1OiJkZWJhdGVBcmd1bWVudDciO30=",
        "hasNextPage": false,
      },
      "totalCount": 8,
    },
  },
}
`;
